2009-12-02  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (get_socket_protocol)
	[HAVE_GETPROTOBYNAME]: fix argument order in the error message

2009-12-01  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f, modules/rawsock/rawsock.c (unused):
	define depending on __GNUC__, not GNU

2009-12-01  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (configdev): use strncpy/IFNAMSIZ
	instead of strcpy for copying the interface name

2009-11-29  Sam Steingold  <sds@gnu.org>

	* m4/clisp.m4 (CL_CLISP): use "." instead of "source" (bash-specific)

2009-11-25  Sam Steingold  <sds@gnu.org>

	* pathname.d (RENAME-FILE): fix the error_too_many_args invocation
	for the ANSI case

2009-11-25  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2902716 ]: CLEAR-INPUT should clear the EOF condition
	* stream.d (clear_input_unbuffered): reset status and
	strm_rd_ch_last slots on all streams, not just tty
	(clear_input_buffered): add, clear the have_eof_p slot
	(clear_input): call clear_input_buffered

2009-11-21  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (dynload_modules): guard libopen() with
	begin_blocking_system_call()
	* foreign.d (open_library): ditto
	* pathname.d (DYNLOAD-MODULES): store libpath on the C stack before
	calling dynload_modules
	* lispbibl.d (dynload_modules): maygc


2009-11-19  Sam Steingold  <sds@gnu.org>

	* eval.d (interpret_bytecode_): use error_mv_toomany
	* control.d (error_mv_toomany): use the message from eval.d

2009-11-19  Sam Steingold  <sds@gnu.org>

	RENAME-FILE accepts :IF-EXISTS (unless *ANSI* is T)
	* pathname.d (move_file) [WIN32_NATIVE]: atomic rename when
	available using MoveFileEx (available since windows 2000)
	(rename_existing_file): use it
	(rename_existing_path): add, use it in rename_file & RENAME-DIRECTORY
	(rename_file): accept if_exists
	(RENAME-FILE): accept :IF-EXISTS unless *ANSI* is T
	* subr.d, subrkw.d (rename_file): modify the declaration
	* modules/syscalls/calls.c (copy_one_file):