@@ -1,0 +1,3 @@
+These are various Rawsock demos.
+Most have to be run as a superuser, so beware!
+We assume no responsibility for your use of this software.
