@@ -1,5 +1,10 @@
 2009-12-02  Sam Steingold  <sds@gnu.org>
 
+	* modules/rawsock/demos/sniffer.lisp: add a demo
+	* modules/rawsock/Makefile.in (clisp-module-distrib): install it
+
+2009-12-02  Sam Steingold  <sds@gnu.org>
+
 	* modules/rawsock/rawsock.c (get_socket_protocol)
 	[HAVE_GETPROTOBYNAME]: fix argument order in the error message
 
